# pbl3

./: .gitignore  report_exists_status.txt  report_make_status.txt  report_prepare_status.txt  template.doc  template_paras.txt  ~$mplate.doc
SnakeGame/: CMakeLists.txt  Game.cpp  Game.h  Input.cpp  Renderer.cpp  Renderer.h
SnakeGame/doc/: com_status.txt  report_doc_status.txt  课程报告_基于控制台Snake游戏工程化实现_完整版.md
SnakeGame/src/: Food.h  Game.cpp  Game.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  SaveSystem.h  Snake.cpp  Snake.h
SnakeGame/src/core/: GameLoop.cpp  GameLoop.h  StateMachine.cpp  StateMachine.h
SnakeGame/src/gameplay/: Food.cpp  Food.h  Snake.cpp
SnakeGame/src/persistence/: SaveSystem.cpp  SaveSystem.h
SnakeGame/src/systems/: InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h  TimeSystem.cpp  TimeSystem.h
doc/: 24280232_王俊达_代码分析报告.doc  md_head_debug.txt  report_final.doc  report_final_status.txt  template_text_raw.txt  ~$程序设计报告模版.doc
doc2/: 24280232_王俊达_代码分析报告.doc  report_body_4th.txt  template4th_paras_from_upload.txt  ~WRL0347.tmp  游戏程序设计报告模版4th.doc
src/: Food.cpp  Game.h  Renderer.cpp  Renderer.h  SaveSystem.cpp  main.cpp
